# hiviewdfx_hiappevent

./: README.md  README_zh.md  bundle.json  hiappevent.gni  hiappevent_aafwk.gni  ohos.build
frameworks/cj/ffi/: BUILD.gn
frameworks/cj/ffi/include/: appevent_packageholder_impl.h  appevent_watcher_impl.h  common.h  error.h  hiappevent_ffi.h  hiappevent_impl.h  log.h
frameworks/cj/ffi/src/: appevent_packageholder_impl.cpp  appevent_watcher_impl.cpp  error.cpp  hiappevent_ffi.cpp  hiappevent_impl.cpp  hiappevent_mock.cpp
frameworks/js/: bundle.json
frameworks/js/napi/: BUILD.gn
frameworks/js/napi/include/: napi_app_event_holder.h  napi_app_event_watcher.h  napi_config_builder.h  napi_env_watcher_manager.h  napi_error.h  napi_hiappevent_builder.h  napi_hiappevent_builder_param.h  napi_hiappevent_config.h  napi_hiappevent_init.h  napi_hiappevent_processor.h  napi_hiappevent_userinfo.h  napi_hiappevent_watch.h  napi_hiappevent_write.h  napi_param_builder.h  napi_util.h
frameworks/js/napi/src/: napi_app_event_holder.cpp  napi_app_event_watcher.cpp  napi_config_builder.cpp  napi_env_watcher_manager.cpp  napi_error.cpp  napi_hiappevent_builder.cpp  napi_hiappevent_builder_param.cpp  napi_hiappevent_config.cpp  napi_hiappevent_init.cpp  napi_hiappevent_js.cpp  napi_hiappevent_js_v9.cpp  napi_hiappevent_processor.cpp  napi_hiappevent_userinfo.cpp  napi_hiappevent_watch.cpp  napi_hiappevent_write.cpp  napi_param_builder.cpp  napi_util.cpp
frameworks/native/libhiappevent/: BUILD.gn  app_crash_config.cpp  app_event_dispatcher.cpp  app_event_handler.cpp  app_event_util.cpp  hiappevent_base.cpp  hiappevent_c.cpp  hiappevent_clean.cpp  hiappevent_config.cpp  hiappevent_facade.cpp  hiappevent_mgr.cpp  hiappevent_pack.cpp  hiappevent_read.cpp  hiappevent_userinfo.cpp  hiappevent_verify.cpp  hiappevent_write.cpp  libhiappevent_base.map
frameworks/native/libhiappevent/cache/: BUILD.gn  api_stats_dao.cpp  app_event_block.cpp  app_event_block_dao.cpp  app_event_blocks_dao.cpp  app_event_cache.cpp  app_event_dao.cpp  app_event_mapping_dao.cpp  app_event_observer_dao.cpp  app_event_store.cpp  custom_event_param_dao.cpp  user_id_dao.cpp  user_property_dao.cpp
frameworks/native/libhiappevent/cache/include/: api_stats_dao.h  app_event_block.h  app_event_block_dao.h  app_event_blocks_dao.h  app_event_cache.h  app_event_cache_common.h  app_event_dao.h  app_event_mapping_dao.h  app_event_observer_dao.h  app_event_store.h  app_event_store_callback.h  custom_event_param_dao.h  user_id_dao.h  user_property_dao.h
frameworks/native/libhiappevent/cleaner/: BUILD.gn  app_event_db_cleaner.cpp  app_event_log_cleaner.cpp
frameworks/native/libhiappevent/cleaner/include/: app_event_cleaner.h  app_event_db_cleaner.h  app_event_log_cleaner.h
frameworks/native/libhiappevent/common/: app_event_stat.cpp
frameworks/native/libhiappevent/common/include/: app_event_stat.h
frameworks/native/libhiappevent/dfr/: event_config_mgr.cpp  resource_overlimit_mgr.cpp
frameworks/native/libhiappevent/dfr/include/: event_config_mgr.h  resource_overlimit_mgr.h
frameworks/native/libhiappevent/include/: app_crash_config.h  app_event_dispatcher.h  app_event_handler.h  app_event_util.h  hiappevent_base.h  hiappevent_c.h  hiappevent_clean.h  hiappevent_common.h  hiappevent_config.h  hiappevent_facade.h  hiappevent_ffrt.h  hiappevent_mgr.h  hiappevent_pack.h  hiappevent_read.h  hiappevent_userinfo.h  hiappevent_verify.h  hiappevent_write.h
frameworks/native/libhiappevent/load/: module_loader.cpp  processor_config_loader.cpp
frameworks/native/libhiappevent/load/include/: module_loader.h  processor_config_loader.h
frameworks/native/libhiappevent/observer/: BUILD.gn  app_event_handler.cpp  app_event_observer.cpp  app_event_observer_mgr.cpp  app_event_processor_proxy.cpp  app_event_watcher.cpp  app_state_callback.cpp  os_event_listener.cpp
frameworks/native/libhiappevent/policy/: BUILD.gn  address_sanitizer_policy.cpp  app_crash_policy.cpp  app_freeze_policy.cpp  cpu_usage_high_policy.cpp  event_policy_mgr.cpp  event_policy_utils.cpp  main_thread_jank_policy.cpp  resource_overlimit_policy.cpp
frameworks/native/libhiappevent/stat/: BUILD.gn  api_stats_aggregator.cpp  api_stats_mgr.cpp  api_stats_storage.cpp  api_stats_timer.cpp  hiappevent_api_metric.cpp
frameworks/native/libhiappevent/utility/: BUILD.gn  app_event_stat.cpp  event_json_util.cpp  file_util.cpp  sql_util.cpp  time_util.cpp
frameworks/native/libhiappevent/watcher/: BUILD.gn  app_event_handler.cpp  app_event_watcher.cpp  app_event_watcher_mgr.cpp
frameworks/native/ndk/: BUILD.gn  hiappevent_ndk.c  libhiappevent_ndk.map
frameworks/native/ndk/include/: ndk_app_event_observer.h  ndk_app_event_processor.h  ndk_app_event_processor_service.h  ndk_app_event_watcher.h  ndk_app_event_watcher_proxy.h  ndk_app_event_watcher_service.h  ndk_event_watcher.h
frameworks/native/ndk/src/: ndk_app_event_observer.cpp  ndk_app_event_processor.cpp  ndk_app_event_processor_service.cpp  ndk_app_event_watcher.cpp  ndk_app_event_watcher_proxy.cpp  ndk_app_event_watcher_service.cpp  ndk_event_watcher.cpp
test/: BUILD.gn
test/processor/: BUILD.gn  test_init.cpp  test_processor.cpp  test_processor.h
test/resource/: ohos_test.xml
test/unittest/common/napi/: BUILD.gn  config.json  napi_hiappevent.test.js  napi_hiappevent_processor.test.js  napi_hiappevent_userinfo.test.js  napi_hiappevent_watcher.test.js  napi_set_event_config.test.js  napi_set_event_param.test.js
test/unittest/common/native/: hiappevent_api_metric_test.cpp  hiappevent_api_metric_test.h  hiappevent_app_event_test.cpp  hiappevent_base_variant_test.cpp  hiappevent_cache_test.cpp  hiappevent_cache_test.h  hiappevent_config_test.cpp  hiappevent_dfr_resource_overlimit_mgr_test.cpp  hiappevent_inner_api_test.cpp  hiappevent_native_test.cpp  hiappevent_native_test.h  hiappevent_observer_test.cpp  hiappevent_policy_test.cpp  hiappevent_read_test.cpp  hiappevent_test_common.h  hiappevent_userinfo_test.cpp  hiappevent_utility_test.cpp  hiappevent_verify_test.cpp  hiappevent_watcher_test.cpp
(+83 files in other folders)
