# Copyright (c) 2021-2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hiappevent/hiappevent.gni")
import("//build/test.gni")

native_hiappevent_path = "//base/hiviewdfx/hiappevent/frameworks/native"
native_module_output_path = "hiappevent/hiappevent"

config("hiappevent_config_test") {
  visibility = [ ":*" ]

  include_dirs = [
    ".",
    "//base/hiviewdfx/hiappevent/interfaces/native/kits/include",
    "$native_hiappevent_path/libhiappevent/cleaner/include",
    "$native_hiappevent_path/libhiappevent/include",
    "$native_hiappevent_path/libhiappevent/observer/include",
    "$native_hiappevent_path/libhiappevent/policy/include",
    "$native_hiappevent_path/libhiappevent/utility/include",
    "$native_hiappevent_path/ndk/include",
    "$hiappevent_interfaces/native/kits/include",
  ]
}

ohos_unittest("HiAppEventNativeTest") {
  module_out_path = native_module_output_path

  configs = [ ":hiappevent_config_test" ]

  sources = [
    "unittest/common/native/hiappevent_config_test.cpp",
    "unittest/common/native/hiappevent_native_test.cpp",
  ]

  deps = [
    "$native_hiappevent_path/libhiappevent:libhiappevent_base",
    "$native_hiappevent_path/libhiappevent/utility:hiappevent_utility",
    "$native_hiappevent_path/ndk:hiappevent_ndk",
    "processor:test_processor",
  ]

  resource_config_file = "resource/ohos_test.xml"

  external_deps = [
    "ability_runtime:app_context",
    "bundle_framework:appexecfwk_core_headers",
    "common_event_service:cesfwk_innerkits",
    "googletest:gtest_main",
    "hiappevent:hiappevent_innerapi",
  ]
}

ohos_unittest("HiAppEventCacheTest") {
  module_out_path = native_module_output_path

  configs = [ ":hiappevent_config_test" ]

  sources = [ "unittest/common/native/hiappevent_cache_test.cpp" ]

  deps = [
    "$native_hiappevent_path/libhiappevent:libhiappevent_base",
    "$native_hiappevent_path/libhiappevent/cache:hiappevent_cache",
    "$native_hiappevent_path/libhiappevent/utility:hiappevent_utility",
    "$native_hiappevent_path/ndk:hiappevent_ndk",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
    "relational_store:native_rdb",
  ]
}

ohos_unittest("HiAppEventWatcherTest") {
  module_out_path = native_module_output_path

  configs = [ ":hiappevent_config_test" ]

  cflags_cc = [ "-Dprivate=public" ]

  sources = [ "unittest/common/native/hiappevent_watcher_test.cpp" ]

  deps = [
    "$native_hiappevent_path/libhiappevent:libhiappevent_base",
    "$native_hiappevent_path/libhiappevent/cache:hiappevent_cache",
    "$native_hiappevent_path/libhiappevent/observer:hiappevent_observer",
    "$native_hiappevent_path/libhiappevent/utility:hiappevent_utility",
  ]

  external_deps = [
    "c_utils:utils",
    "ffrt:libffrt",
    "googletest:gtest_main",
    "hilog:libhilog",
    "relational_store:native_rdb",
  ]
}

ohos_unittest("HiAppEventPolicyTest") {
  module_out_path = native_module_output_path
 
  configs = [ ":hiappevent_config_test" ]
 
  sources = [ 
    "unittest/common/native/hiappevent_policy_test.cpp",
    "$native_hiappevent_path/libhiappevent/policy/event_policy_mgr.cpp",
  ]
 
  deps = [
    "$native_hiappevent_path/libhiappevent:libhiappevent_base",
  ]
 
  external_deps = [
    "ability_runtime:app_context",
    "bundle_framework:appexecfwk_core_headers",
    "common_event_service:cesfwk_innerkits",
    "ffrt:libffrt",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hicollie:libhicollie",
    "hilog:libhilog",
    "hilog:libsandboxlog",
    "storage_service:storage_manager_acl",
    "storage_service:storage_manager_sa_proxy",
  ]
}

ohos_unittest("HiAppEventInnerApiTest") {
  module_out_path = native_module_output_path

  configs = [ ":hiappevent_config_test" ]

  sources = [ "unittest/common/native/hiappevent_inner_api_test.cpp" ]

  deps = [ "$native_hiappevent_path/libhiappevent:libhiappevent_base" ]

  external_deps = [
    "ability_runtime:app_context",
    "bundle_framework:appexecfwk_core_headers",
    "common_event_service:cesfwk_innerkits",
    "ffrt:libffrt",
    "googletest:gtest_main",
    "hiappevent:hiappevent_innerapi",
  ]
}

ohos_unittest("HiAppEventUserInfoTest") {
  module_out_path = native_module_output_path

  configs = [ ":hiappevent_config_test" ]

  sources = [ "unittest/common/native/hiappevent_userinfo_test.cpp" ]

  deps = [
    "$native_hiappevent_path/libhiappevent:libhiappevent_base",
    "$native_hiappevent_path/libhiappevent/cache:hiappevent_cache",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
    "relational_store:native_rdb",
  ]
}

ohos_unittest("HiAppEventAppEventTest") {
  module_out_path = native_module_output_path

  configs = [ ":hiappevent_config_test" ]

  sources = [ "unittest/common/native/hiappevent_app_event_test.cpp" ]

  deps = [ "$native_hiappevent_path/libhiappevent:libhiappevent_base" ]

  external_deps = [
    "ability_runtime:app_context",
    "bundle_framework:appexecfwk_core_headers",
    "common_event_service:cesfwk_innerkits",
    "googletest:gtest_main",
    "hiappevent:hiappevent_innerapi",
  ]
}

ohos_unittest("HiAppEventUtilityTest") {
  module_out_path = native_module_output_path

  configs = [ ":hiappevent_config_test" ]

  sources = [ "unittest/common/native/hiappevent_utility_test.cpp" ]

  deps = [
    "$native_hiappevent_path/libhiappevent:libhiappevent_base",
    "$native_hiappevent_path/libhiappevent/utility:hiappevent_utility",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gtest_main",
    "jsoncpp:jsoncpp",
  ]
}

ohos_unittest("HiAppEventVerifyTest") {
  module_out_path = native_module_output_path

  configs = [ ":hiappevent_config_test" ]

  sources = [ "unittest/common/native/hiappevent_verify_test.cpp" ]

  deps = [ "$native_hiappevent_path/libhiappevent:libhiappevent_base" ]

  external_deps = [
    "c_utils:utils",
    "googletest:gtest_main",
  ]
}

ohos_unittest("HiAppEventDfrResourceOverlimitMgrTest") {
  module_out_path = native_module_output_path

  configs = [ ":hiappevent_config_test" ]

  sources = [
    "unittest/common/native/hiappevent_dfr_resource_overlimit_mgr_test.cpp",
    "../frameworks/native/libhiappevent/policy/resource_overlimit_mgr.cpp",
  ]

  deps = [
    "$native_hiappevent_path/libhiappevent:libhiappevent_base",
    "$native_hiappevent_path/libhiappevent/utility:hiappevent_utility",
  ]

  external_deps = [
    "ability_runtime:app_context",
    "bundle_framework:appexecfwk_core_headers",
    "common_event_service:cesfwk_innerkits",
    "c_utils:utils",
    "googletest:gtest_main",
    "googletest:gmock_main",
    "hilog:libhilog",
  ]
}

ohos_unittest("HiAppEventObserverTest") {
  module_out_path = native_module_output_path

  configs = [ ":hiappevent_config_test" ]

  sources = [ "unittest/common/native/hiappevent_observer_test.cpp" ]

  deps = [
    "$native_hiappevent_path/libhiappevent:libhiappevent_base",
    "$native_hiappevent_path/libhiappevent/utility:hiappevent_utility",
  ]

  external_deps = [
    "ability_runtime:app_context",
    "bundle_framework:appexecfwk_core_headers",
    "common_event_service:cesfwk_innerkits",
    "googletest:gmock_main",
    "googletest:gtest_main",
  ]
}

group("unittest") {
  testonly = true
  deps = [
    ":HiAppEventAppEventTest",
    ":HiAppEventCacheTest",
    ":HiAppEventInnerApiTest",
    ":HiAppEventNativeTest",
    ":HiAppEventPolicyTest",
    ":HiAppEventUserInfoTest",
    ":HiAppEventUtilityTest",
    ":HiAppEventVerifyTest",
    ":HiAppEventWatcherTest",
    ":HiAppEventDfrResourceOverlimitMgrTest",
    ":HiAppEventObserverTest",
    "unittest/common/napi:unittest",
  ]
}
