# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("hiappevent") {
  include_dirs = [ "include/" ]

  sources = [
    "./src/napi_hiappevent_builder.cpp",
    "./src/napi_hiappevent_config.cpp",
    "./src/napi_hiappevent_init.cpp",
    "./src/napi_hiappevent_js.cpp",
    "./src/napi_hiappevent_write.cpp",
    "./src/napi_util.cpp",
  ]

  deps = [ "//base/hiviewdfx/hiappevent/frameworks/native/libhiappevent:libhiappevent_base" ]

  external_deps = [
    "hilog_native:libhilog",
    "napi:ace_napi",
  ]

  relative_install_dir = "module"

  part_name = "hiappevent_js"
  subsystem_name = "hiviewdfx"
}

ohos_shared_library("hiappevent_v9") {
  include_dirs = [ "include/" ]

  sources = [
    "./src/napi_app_event_holder.cpp",
    "./src/napi_app_event_watcher.cpp",
    "./src/napi_hiappevent_builder.cpp",
    "./src/napi_hiappevent_config.cpp",
    "./src/napi_hiappevent_init.cpp",
    "./src/napi_hiappevent_js_v9.cpp",
    "./src/napi_hiappevent_watch.cpp",
    "./src/napi_hiappevent_write.cpp",
    "./src/napi_util.cpp",
  ]

  deps = [ "//base/hiviewdfx/hiappevent/frameworks/native/libhiappevent:libhiappevent_base" ]

  external_deps = [
    "hilog_native:libhilog",
    "napi:ace_napi",
    "relational_store:native_rdb",
  ]

  output_name = "hiappevent_napi"
  relative_install_dir = "module/hiviewdfx"

  part_name = "hiappevent_js"
  subsystem_name = "hiviewdfx"
}
