# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hiappevent/hiappevent_aafwk.gni")
import("//build/ohos.gni")

config("libhiappevent_source_config") {
  visibility = [ "*:*" ]
  include_dirs = [
    "include",
    "load/include",
    "../../../interfaces/native/inner_api/include",
    "../../../interfaces/native/kits/include",
  ]
}

ohos_shared_library("libhiappevent_base") {
  public_configs = [
    ":libhiappevent_source_config",
    "cache:hiappevent_cache_config",
    "observer:hiappevent_watcher_config",
  ]

  sources = [
    "hiappevent_base.cpp",
    "hiappevent_c.cpp",
    "hiappevent_clean.cpp",
    "hiappevent_config.cpp",
    "hiappevent_read.cpp",
    "hiappevent_userinfo.cpp",
    "hiappevent_verify.cpp",
    "hiappevent_write.cpp",
    "load/module_loader.cpp",
  ]

  deps = [
    "cache:hiappevent_cache",
    "cleaner:hiappevent_cleaner",
    "observer:hiappevent_observer",
    "utility:hiappevent_utility",
  ]

  external_deps = [
    "ability_runtime:app_context",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "ffrt:libffrt",
    "hilog:libhilog",
    "hitrace:libhitracechain",
    "relational_store:native_rdb",
  ]

  part_name = "hiappevent"
  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "hiviewdfx"
}
