# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("hiappevent_cache_config") {
  visibility = [ "*:*" ]
  include_dirs = [ "include" ]
}

ohos_source_set("hiappevent_cache") {
  public_configs = [ ":hiappevent_cache_config" ]

  sources = [
    "app_event_block.cpp",
    "app_event_block_dao.cpp",
    "app_event_blocks_dao.cpp",
    "app_event_cache.cpp",
    "app_event_store.cpp",
  ]

  deps = [ "../utility:hiappevent_utility" ]

  external_deps = [
    "hilog_native:libhilog",
    "relational_store:native_rdb",
  ]
}
